--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-17  Carl Hetherington  <inkscape@carlh.net>
+
+	* src/sp-use.cpp: fix a compiler warning (closes #992960)
+
+	* src/sp-offset.cpp: fix a compiler warning (closes #992960)
+
+	* src/sp-text.cpp: fix a compiler warning (closes #992959)
+
 2004-07-16  Kees Cook  <kees@outflux.net>
 
 	* src/verbs.h, src/verbs.cpp: added "sp_verbs_find" function for bryce.
